--- a/nippon.css
+++ b/nippon.css
@@ -207,6 +207,7 @@ button:hover {
 
 
 
+
 /*   INTRODUKTION TIL PROJEKTET - DELEN */
 
 .introduktion,
@@ -226,7 +227,7 @@ button:hover {
 
 
 .h-side1 {
-    margin: 70px 70px 0px 50px;
+    margin: 220px 70px 0px 50px;
 }
 
 /*Giver den en minus værdi, for at få overskrifterne til at fremstå sammenhængende, altå rykker dem tættere på hinanden*/
@@ -271,14 +272,12 @@ button:hover {
 
 .v-side2,
 .v-side3 {
-    margin: 60px 90px 0px 90px;
+    margin: 60px 90px 0px 60px;
 }
 
 .v-side2 p,
-.v-side3 p,
-button {
+.v-side3 p {
     max-width: 100vh;
-    margin: 25px;
 }
 
 .h-side2,
@@ -296,6 +295,7 @@ button {
     max-width: 65vh;
     margin: 40px 70px 0 30px;
 }
+
 
 
 
@@ -360,12 +360,6 @@ hr {
     position: relative; 
     padding: 10px 60px 0 0;
 }
-
-
-
-
-
-
 
 
 /*   ------ FOOTER  ------ */
